[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/mainMenu/LocalOrOnline.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/agane/Agane╠Ç 55 (roman).ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="ModeSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 800.0
margin_top = 60.0
margin_right = -800.0
margin_bottom = -60.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 960.0
custom_constants/separation = 5
alignment = 1

[node name="Offline" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 320.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 1 )
text = "Offline"

[node name="Online" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 435.0
margin_right = 320.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 2 )
text = "Online"

[node name="Spacing" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 510.0
margin_right = 320.0
margin_bottom = 524.0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 529.0
margin_right = 320.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 3 )
text = "Back"
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Offline" to="." method="select_offline"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Offline" to="." method="_on_Offline_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Online" to="." method="select_online"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Online" to="." method="_on_Online_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Back" to="." method="select_exit"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
